Ajout du système de routage

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>EcoRide</title>
   </head>
   <body>
-    <header></header>
+    <header>la menu navigation du site EcoRide</header>
 
-    <main>Ceci est la page principale de mon site</main>
+    <main id="main-page">
+      <!-- Ceci est le contenu de ma page injecté ici -->
+    </main>
 
-    <footer></footer>
+    <footer>le footer de mon site</footer>
+
+    <script type="module" src="/Router/router.js"></script>
   </body>
 </html>
