--- a/pages/home.html
+++ b/pages/home.html
@@ -1,2 +1,2 @@
 <h1>Bienvenue sur le site de covoiturages EcoRide</h1>
-<button class="btn btn-primary">Coucou</button>
+<button class="btn gradient-primary">Coucou</button>
