Ajout du footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
       <!-- Ceci est le contenu de ma page injecté ici -->
     </main>
 
-    <footer>le footer de mon site</footer>
+    <footer class="gradient-primary text-center footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <p class="text-black">Contact : EcoRide@gmail.com</p>
+          </div>
+          <div class="col-12 col-lg-4">
+            <p>Mentions légales</p>
+          </div>
+          <div class="col-12 col-lg-4">
+            <p>Politique de confidentialité</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="module" src="/Router/router.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
