mise en place du main

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,2 +1,82 @@
-<h1>Bienvenue sur le site de covoiturages EcoRide</h1>
-<button class="btn gradient-primary">Coucou</button>
+<div class="p-5">
+  <div class="text-center m-15 text-light">
+    <h1 class="text-shadow-custom">
+      Bienvenue sur le site de covoiturages EcoRide
+    </h1>
+  </div>
+</div>
+<div class="container my-5">
+  <div class="row justify-content-center w-100 text-center">
+    <!-- Card 1 -->
+    <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center mb-4">
+      <div class="card" style="width: 18rem">
+        <img
+          src="https://media.istockphoto.com/id/1154420286/fr/photo/homme-entrant-le-covoiturage-partageant-la-voiture.jpg?s=2048x2048&w=is&k=20&c=qyLneyXjKefHxkHqnAhBbSm78_p42YT9Z1cvUtt4VVk="
+          class="card-img-top"
+          alt="Card 1"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Card 1</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn gradient-primary">Inscrivez-vous</a>
+        </div>
+      </div>
+    </div>
+    <!-- Card 2 -->
+    <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center mb-4">
+      <div class="card" style="width: 18rem">
+        <img
+          src="https://media.istockphoto.com/id/1175196895/fr/photo/covoiturage.jpg?s=2048x2048&w=is&k=20&c=Sn8TH9zdWb4dy0BwW-d5Kwy8DBLT2MjZoM6Zr8wF_X4="
+          class="card-img-top"
+          alt="Card 2"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Card 2</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn gradient-primary">Inscrivez-vous</a>
+        </div>
+      </div>
+    </div>
+    <!-- Card 3 -->
+    <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center mb-4">
+      <div class="card" style="width: 18rem">
+        <img
+          src="https://media.istockphoto.com/id/1179125116/fr/photo/femme-sasseyant-dans-la-voiture-avec-des-amis.jpg?s=2048x2048&w=is&k=20&c=LBxrXMHc87BW5XapRR-OKDQQ9yTgpudNrUmTBg5g6ZU="
+          class="card-img-top"
+          alt="Card 3"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Card 3</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn gradient-primary">Inscrivez-vous</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="search-container mt-5 container">
+  <div class="row justify-content-center align-items-center w-100">
+    <!-- Input -->
+    <div class="col-md-8 col-lg-6 col-12">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Trouver un itinéraire..."
+        aria-label="Recherche"
+      />
+    </div>
+    <!-- Bouton -->
+    <div class="col-md-auto col-12 mt-3 mt-md-0">
+      <button class="btn btn-primary">Chercher</button>
+    </div>
+  </div>
+</div>
