--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="/scss/main.css" />
     <title>EcoRide</title>
   </head>
-  <body>
+  <body class="full-page-bg min-vh-100">
     <header>
       <nav
         class="navbar navbar-expand-lg gradient-primary"
         data-bs-theme="dark"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">EcoRide</a>
+          <a class="navbar-brand fs-2 text-shadow-custom" href="/">EcoRide</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -32,18 +32,20 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul
+              class="navbar-nav ms-auto mb-2 mb-lg-0 gap-5 text-shadow-custom text-color-white"
+            >
               <li class="nav-item">
-                <a class="nav-link" href="/">Accueil</a>
+                <a class="nav-link text-reset" href="/">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/">Covoiturages</a>
+                <a class="nav-link text-reset" href="/">Covoiturages</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/">Contact</a>
+                <a class="nav-link text-reset" href="/">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/">Connexion</a>
+                <a class="nav-link text-reset" href="/">Connexion</a>
               </li>
             </ul>
           </div>
@@ -59,7 +61,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4">
-            <p class="text-black">Contact : EcoRide@gmail.com</p>
+            <p>Contact : EcoRide@gmail.com</p>
           </div>
           <div class="col-12 col-lg-4">
             <p>Mentions légales</p>
