Modification d'un peu de visuel du main

--- a/pages/home.html
+++ b/pages/home.html
@@ -15,13 +15,15 @@
           class="card-img-top"
           alt="Card 1"
         />
-        <div class="card-body">
-          <h5 class="card-title">Card 1</h5>
+        <div class="card-body gradient-primary">
+          <h5 class="card-title">Changeons demain</h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            Rejoignez EcoRide, la plateforme de covoiturage écologique qui
+            réduit les émissions de CO₂ tout en favorisant la mobilité durable.
           </p>
-          <a href="#" class="btn gradient-primary">Inscrivez-vous</a>
+          <a href="#" class="btn gradient-primary border border-2"
+            >Inscrivez-vous</a
+          >
         </div>
       </div>
     </div>
@@ -33,13 +35,15 @@
           class="card-img-top"
           alt="Card 2"
         />
-        <div class="card-body">
-          <h5 class="card-title">Card 2</h5>
+        <div class="card-body gradient-primary">
+          <h5 class="card-title">Ensemble</h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            Partagez vos trajets avec EcoRide et contribuez à préserver la
+            planète tout en économisant sur vos déplacements.
           </p>
-          <a href="#" class="btn gradient-primary">Inscrivez-vous</a>
+          <a href="#" class="btn gradient-primary border border-2"
+            >Inscrivez-vous</a
+          >
         </div>
       </div>
     </div>
@@ -51,32 +55,34 @@
           class="card-img-top"
           alt="Card 3"
         />
-        <div class="card-body">
-          <h5 class="card-title">Card 3</h5>
+        <div class="card-body gradient-primary">
+          <h5 class="card-title">Pour l'avenir de tous</h5>
           <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
+            Optez pour EcoRide, le covoiturage responsable qui allie économies,
+            confort et respect de l'environnement.
           </p>
-          <a href="#" class="btn gradient-primary">Inscrivez-vous</a>
+          <a href="#" class="btn gradient-primary border border-2"
+            >Inscrivez-vous</a
+          >
         </div>
       </div>
     </div>
   </div>
 </div>
 <div class="search-container mt-5 container">
-  <div class="row justify-content-center align-items-center w-100">
+  <div class="row justify-content-around align-items-center w-100">
     <!-- Input -->
     <div class="col-md-8 col-lg-6 col-12">
       <input
         type="text"
-        class="form-control"
+        class="form-control text-center"
         placeholder="Trouver un itinéraire..."
         aria-label="Recherche"
       />
     </div>
     <!-- Bouton -->
-    <div class="col-md-auto col-12 mt-3 mt-md-0">
-      <button class="btn btn-primary">Chercher</button>
+    <div class="col-md-auto col-12 mt-3 mt-md-0 text-center">
+      <button class="btn btn-primary w-auto">Chercher</button>
     </div>
   </div>
 </div>
