--- a/pages/home.html
+++ b/pages/home.html
@@ -69,10 +69,10 @@
     </div>
   </div>
 </div>
-<div class="search-container mt-5 container">
-  <div class="row justify-content-around align-items-center w-100">
+<div class="search-container mt-5 container w-50">
+  <div class="row justify-content-between align-items-center w-100">
     <!-- Input -->
-    <div class="col-md-8 col-lg-6 col-12">
+    <div class="col-md-8 col-lg-6 col-12 w-75">
       <input
         type="text"
         class="form-control text-center"
@@ -81,7 +81,7 @@
       />
     </div>
     <!-- Bouton -->
-    <div class="col-md-auto col-12 mt-3 mt-md-0 text-center">
+    <div class="col-md-auto col-12 mt-3 mt-md-0 text-center w-25">
       <button class="btn btn-primary w-auto">Chercher</button>
     </div>
   </div>
